# Splunk-for-blockchain-simulator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  render.yaml
assertions/: Cargo.toml
assertions/src/: cli.rs  clickhouse_client.rs  main.rs  report.rs
assertions/src/checks/: alert_latency.rs  compression_check.rs  log_completeness.rs  mod.rs  reorg_handling.rs
scenarios/: flash_loan_arbitrage_drain.json  flash_loan_attack.json  nft_wash_trade.json  sandwich_attack.json
simulator/: Cargo.toml
simulator/src/: cli.rs  config.rs  main.rs
simulator/src/dashboard/: auth.rs  handlers.rs  metrics.rs  mod.rs  server.rs
simulator/src/engine/: mod.rs  reorg.rs  scenario.rs  tps_ramp.rs
simulator/src/kafka/: any_producer.rs  file_producer.rs  mod.rs  producer.rs  reorg_publisher.rs
simulator/src/observability/: mod.rs  tracing_setup.rs
simulator/src/synthesizer/: abi.rs  defi_params.rs  evm.rs  hashes.rs  log_builder.rs  mod.rs
