[workspace]
resolver = "2"
members = ["simulator", "assertions"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tokio              = { version = "1", features = ["full"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
serde_yaml         = "0.9"
rand               = "0.8"
sha2               = "0.10"
hex                = "0.4"
clap               = { version = "4", features = ["derive", "env"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow             = "1"
thiserror          = "1"
chrono             = { version = "0.4", features = ["serde"] }
uuid               = { version = "1", features = ["v4"] }
