[package]
name = "assertions"
version.workspace = true
edition.workspace = true

[[bin]]
name = "assertions"
path = "src/main.rs"

[dependencies]
tokio.workspace              = true
serde.workspace              = true
serde_json.workspace         = true
clap.workspace               = true
tracing.workspace            = true
tracing-subscriber.workspace = true
anyhow.workspace             = true
thiserror.workspace          = true
chrono.workspace             = true
uuid.workspace               = true

clickhouse = { version = "0.11", features = ["tls"] }
