[package]
name = "simulator"
version.workspace = true
edition.workspace = true

[[bin]]
name = "simulator"
path = "src/main.rs"

[features]
# Enable real Kafka publishing. Requires a C toolchain (lz4-sys native build).
# Omit this feature to build with only the file/stdout publisher (no native deps).
kafka = ["dep:rskafka"]

[dependencies]
tokio.workspace              = true
serde.workspace              = true
serde_json.workspace         = true
serde_yaml.workspace         = true
rand.workspace               = true
sha2.workspace               = true
hex.workspace                = true
clap.workspace               = true
tracing.workspace            = true
tracing-subscriber.workspace = true
anyhow.workspace             = true
thiserror.workspace          = true
chrono.workspace             = true
uuid.workspace               = true

rskafka    = { version = "0.5", features = ["snap"], optional = true }
axum       = { version = "0.7", features = ["macros"] }
tower      = { version = "0.4" }
tower-http = { version = "0.5", features = ["validate-request"] }
prometheus = { version = "0.13", default-features = false, features = ["process"] }
once_cell  = "1"
